# Botanist

./: .env.example  .gitignore  BotEssentials.py  CONTRIBUTING.md  Cargo.toml  Config.py  Development.py  Embedding.py  Feedback.py  Poll.py  README.md  Role.py  Slapping.py  Time.py  Todo.py  checks.py  config.py  deploy.sh  executioner.py  help.py  main.py  new_Config.py  requirements.txt  run.sh  settings.py  utilities.py
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature_request.md  new-command.md  new-command.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: linting.yml
exts/: config.py  development.py  embedding.py  essentials.py  poll.py  role.py  slapping.py  time.py  todo.py
lang/essentials/: strings.en
lang/help/: cogs.en  config.en  development.en  embedding.en  essentials.en  help.en  nn.en  poll.en  role.en  slapping.en  time.en
lang/poll/: help.en  strings.en
lang/role/: strings.en
lang/slapping/: help.en  strings.en
migrations/2021-02-18-232258_db_setup/: down.sql  up.sql
src/: OLDhelp.py  checks.rs  config.py  db.rs  help.py  main.py  main.rs  schema.rs  settings.py  tweak.rs  utilities.py  utils.rs
src/commands/: dev.rs  misc.rs  mod.rs  poll.rs
src/exts/: development.py  embedding.py  essentials.py  formula.tex  math.py  poll.py  role.py  slapping.py  time.py  todo.py
src/lang/config/: help.en
src/lang/development/: help.en  strings.en
src/lang/essentials/: strings.en
src/lang/help/: help.en  strings.en
src/lang/math/: help.en
src/lang/poll/: help.en  strings.en
src/lang/role/: help.en
src/lang/slapping/: help.en  strings.en
src/lang/time/: help.en
src/tex/: formula.tex
