[package]
name = "botanist"
version = "0.1.0"
authors = ["s0lst1ce <thithib.cohergne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
chrono = "0.4"
async-trait = "0.1"
db-adapter = {git="https://github.com/Botanism/rust-db-adapter", branch="main"}

[dependencies.sqlx]
version = "0.5"
features = ["macros", "runtime-tokio-rustls", "mysql"]

[dependencies.serenity]
version = "0.10"
features = ["framework", "standard_framework", "rustls_backend", "cache"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]