[package]
name = "botanist"
version = "0.1.0"
authors = ["s0lst1ce <thithib.cohergne@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = {version="0.3", features=["env-filter"]}
chrono = "0.4"
async-trait = "0.1"
db-adapter = {path="../db-adapter"}
poise = { git = "https://github.com/kangalioo/poise", branch = "develop", features = ["collector"] }

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["model", "rustls_backend", "cache", "collector", "client"]

#[patch.crates-io]
#serenity = { git = "https://github.com/kangalioo/serenity", branch = "poise-tailored" }

[patch.crates-io]
serenity = {git="https://github.com/serenity-rs/serenity", branch="next"}